[gd_scene load_steps=9 format=3 uid="uid://do113ikliufn3"]

[ext_resource type="Script" path="res://scripts/kitchen_panel/mug_logic.gd" id="1_7mphb"]
[ext_resource type="Texture2D" uid="uid://cj3x3jd54me62" path="res://assets/images/kitchen panel/mug sprites/bnb_mug_active_backnforth (1).png" id="2_dkovv"]

[sub_resource type="Animation" id="Animation_6rmyq"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ojgo5"]
resource_name = "idle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 5, 6]
}

[sub_resource type="Animation" id="Animation_kxjgk"]
resource_name = "move_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 5, 2, 4]
}

[sub_resource type="Animation" id="Animation_ep0q5"]
resource_name = "move_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 5, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfqmk"]
_data = {
"RESET": SubResource("Animation_6rmyq"),
"idle": SubResource("Animation_ojgo5"),
"move_left": SubResource("Animation_kxjgk"),
"move_right": SubResource("Animation_ep0q5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hhmh3"]
size = Vector2(24, 26.5)

[node name="Mug" type="Node2D" groups=["counter", "ingredient"]]
script = ExtResource("1_7mphb")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("2_dkovv")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_kfqmk")
}
speed_scale = 0.7

[node name="Area2D" type="Area2D" parent="." groups=["counter", "ingredient"]]
script = ExtResource("1_7mphb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.75)
shape = SubResource("RectangleShape2D_hhmh3")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
